--- a/app/src/main/res/layout/fragment_faq.xml
+++ b/app/src/main/res/layout/fragment_faq.xml
@@ -11,5 +11,10 @@
         android:textSize="30sp"
         android:layout_centerInParent="true" />
 
+    <WebView
+        android:id="@+id/FAQ_WebView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
 
 </RelativeLayout>
