--- a/app/src/main/res/layout/activity_handle_share_action.xml
+++ b/app/src/main/res/layout/activity_handle_share_action.xml
@@ -98,36 +98,19 @@
         android:text="Inclou un comentari (opcional):"
         app:layout_constraintTop_toBottomOf="@+id/divider2" />
 
-    <android.support.design.widget.TextInputLayout
+
+    <EditText
         android:id="@+id/handle_share_comments"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp">
-
-        <android.support.design.widget.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="" />
-
-    </android.support.design.widget.TextInputLayout>
+        android:layout_marginRight="10dp"
+        android:imeOptions="actionDone"
+        android:singleLine="true"
+        android:hint="" />
 
 
-    <!--<ExpandableListView
-        android:id="@+id/expandableListView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:divider="@android:color/darker_gray"
-        android:dividerHeight="0.5dp"
-        app:layout_constraintTop_toBottomOf="@+id/tweet_layout"
-        tools:layout_editor_absoluteX="16dp"
-        android:backgroundTint="@color/tw__composer_deep_gray"
-        android:groupIndicator="@drawable/setting_selector"
-        android:transcriptMode="alwaysScroll">
-
-    </ExpandableListView>-->
 
 
 </android.support.constraint.ConstraintLayout>
