--- a/app/src/main/res/layout/activity_handle_share_action.xml
+++ b/app/src/main/res/layout/activity_handle_share_action.xml
@@ -26,8 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="?android:attr/listDivider"
-        app:layout_constraintTop_toBottomOf="@+id/tweet_layout"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintTop_toBottomOf="@+id/tweet_layout" />
 
     <TextView
         android:id="@+id/textView2"
@@ -37,8 +36,7 @@
         android:layout_marginLeft="15dp"
         android:textSize="24dp"
         android:text="Proposa una llista:"
-        app:layout_constraintTop_toBottomOf="@+id/divider"
-        tools:layout_editor_absoluteX="175dp" />
+        app:layout_constraintTop_toBottomOf="@+id/divider" />
 
     <RadioGroup
         android:id="@+id/handle_share_radio_group"
@@ -46,17 +44,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:layout_editor_absoluteX="222dp"
-        android:checkedButton="@+id/radioButton1">>
+        android:checkedButton="@+id/radioButton1"
+        app:layout_constraintTop_toBottomOf="@+id/textView2">
 
         <RadioButton
             android:id="@+id/radioButton1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/list_option1"
-            tools:layout_editor_absoluteX="149dp"
-            tools:layout_editor_absoluteY="166dp"
             android:textSize="18dp" />
 
         <RadioButton
@@ -64,8 +59,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/list_option2"
-            tools:layout_editor_absoluteX="149dp"
-            tools:layout_editor_absoluteY="166dp"
             android:textSize="18dp" />
 
         <RadioButton
@@ -73,8 +66,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/list_option3"
-            tools:layout_editor_absoluteX="149dp"
-            tools:layout_editor_absoluteY="166dp"
             android:textSize="18dp" />
 
     </RadioGroup>
@@ -85,8 +76,7 @@
         android:layout_height="1dp"
         android:layout_marginTop="20dp"
         android:background="?android:attr/listDivider"
-        app:layout_constraintTop_toBottomOf="@+id/handle_share_radio_group"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintTop_toBottomOf="@+id/handle_share_radio_group"/>
 
     <TextView
         android:id="@+id/textView3"
@@ -98,7 +88,6 @@
         android:text="Inclou un comentari (opcional):"
         app:layout_constraintTop_toBottomOf="@+id/divider2" />
 
-
     <EditText
         android:id="@+id/handle_share_comments"
         android:layout_width="match_parent"
@@ -109,8 +98,5 @@
         android:imeOptions="actionDone"
         android:singleLine="true"
         android:hint="" />
-
-
-
 
 </android.support.constraint.ConstraintLayout>
