--- a/app/src/main/res/layout/activity_handle_share_action.xml
+++ b/app/src/main/res/layout/activity_handle_share_action.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+
+<android.support.v4.widget.NestedScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="#E8E8E8">
+
+<android.support.constraint.ConstraintLayout
+
     android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HandleShareAction"
-    android:background="#E8E8E8">
+    tools:context=".HandleShareAction"    >
 
     <RelativeLayout
 
@@ -100,3 +106,7 @@
         android:hint="" />
 
 </android.support.constraint.ConstraintLayout>
+
+</android.support.v4.widget.NestedScrollView>
+
+
