--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,6 +5,10 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_alertes"
+            android:icon="@drawable/ic_menu_report"
+            android:title="@string/nav_alertes" />
+        <item
             android:id="@+id/nav_lists"
             android:icon="@drawable/ic_menu_lists"
             android:title="@string/nav_lists" />
