--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,9 +5,9 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_alertes"
-            android:icon="@drawable/ic_menu_report"
-            android:title="@string/nav_alerts" />
+            android:id="@+id/nav_faq"
+            android:icon="@drawable/ic_menu_faq"
+            android:title="@string/nav_faq" />
         <item
             android:id="@+id/nav_lists"
             android:icon="@drawable/ic_menu_lists"
@@ -19,20 +19,22 @@
         <item
             android:id="@+id/nav_certify"
             android:icon="@drawable/ic_menu_certify"
-            android:title="@string/nav_certify" />
+            android:title="@string/nav_certify"
+            android:enabled="false"/>
         <item
             android:id="@+id/nav_tools"
             android:icon="@drawable/ic_menu_tools"
+            android:enabled="false"
             android:title="@string/nav_tools" />
+        <item
+            android:id="@+id/nav_alertes"
+            android:icon="@drawable/ic_menu_report"
+            android:title="@string/nav_alerts"
+            android:enabled="false"/>
         <item
             android:id="@+id/nav_academy"
             android:icon="@drawable/ic_menu_academy"
             android:title="@string/nav_academy" />
-        <item
-            android:id="@+id/nav_faq"
-            android:icon="@drawable/ic_menu_faq"
-            android:title="@string/nav_faq" />
-
     </group>
 
     <item android:title="#FemXarxa">
